# bevy_game

./: .gitignore  CLAUDE.md  Cargo.toml  STATUS.md  plan.md
.claude/: settings.json
.claude/rules/: code-quality.md
assets/shaders/: clouds.wgsl  palette_extension.wgsl
docs/: architecture.md  code_review_and_roadmap.md  implementation_plan.md  lighting_study_guide.md  lod_trees_implementation.md  multiplayer_architecture.md  optimizar_el _mundo.md  optimization_roadmap.md  palette_system_plan.md  performance_review.md  roadmap.md  trees_implementation.md  visuals_and_vegetation.md  work_session_plan.md  world_limits.md  worldgen_vs_minecraft.md
src/: lib.rs  main.rs  player.rs
src/core/: constants.rs  events.rs  mod.rs  resources.rs  states.rs
src/debug/: mod.rs
src/physics/: components.rs  mod.rs  rapier_integration.rs
src/player/: camera.rs  components.rs  input.rs  mod.rs  movement.rs  reticle.rs
src/sky/: clouds.rs  mod.rs  time_of_day.rs
src/ui/: hud.rs  menu.rs  mod.rs  pause.rs
src/vegetation/: config.rs  grass.rs  mod.rs  trees.rs
src/vegetation/trees/: bush.rs  mod.rs  oak.rs  pine.rs  placement.rs  small.rs  voxelize.rs
src/voxel/: biomes.rs  chunk.rs  chunk_cache.rs  chunk_loading.rs  destruction.rs  downsampling.rs  drops.rs  dynamic_chunks.rs  frustum_culling.rs  greedy_meshing.rs  lod_chunk_loading.rs  lod_chunks.rs  lod_system.rs  meshing.rs  mod.rs  octree.rs  palette.rs  palette_material.rs  spatial_hash.rs  tools.rs  voxel_color.rs  voxel_types.rs
