[package]
name = "bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_rapier3d = "0.32.0"
fastnoise-lite = "1.1.1"
rand = "0.8"
rayon = "1.11.0"
futures-lite = "2.5.0"

# Compilación rápida en desarrollo
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Build de release optimizado para runtime (a costa de mayor tiempo de compilación)
[profile.release]
lto = "thin"
codegen-units = 1
